# LEGO_Linux

./: BuildingSimplification.h  CMakeLists.txt  OpenCVSimplification.cpp  PlyWriter.cpp  bldsFitting.py  buildings.vdb  main.cpp
openVDB/: ara_all.bat  ara_boost.bat  ara_c-blosc.bat  ara_cppunit.bat  ara_glew.bat  ara_glfw3.bat  ara_openexr.bat  ara_openvdb.bat  ara_readme.txt  ara_tbb.bat  ara_zlib.bat
openVDB/ara_test/: downloadVDBFile.bat  readme.txt  runTest.bat
openVDB/custom/cmakeListFiles/: CMakeLists.txt
openVDB/custom/cmakeListFiles/openvdb/: CMakeLists.txt
openVDB/custom/cmakeListFiles/openvdb/python/: CMakeLists.txt
simp/: BuildingSimplification.cpp
src/: ContourUtils.cpp  OpenCVSimplification.cpp  OurCustomSimplification.cpp  PlyWriter.cpp  PlyWriter.h  main.cpp
util/: BuildingLayer.h  OBJWriter.cpp
